初期表示画像をNoImage.pngに変更

--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,6 @@
     </head>
     <body>
         <div id="elapsedtime">elapsedtime</div>
-        <img id="python_video" width="640" height="480" src="./image/sample.png">
+        <img id="python_video" width="640" height="480" src="./image/noimage.png">
     </body>
 </html>
